# Bottle-Cap-Detection

./: Dockerfile  README.md  pyproject.toml  requirements.txt
bsort/: cli.py  config.py
bsort/data/: preprocessing.py
bsort/inference/: predictor.py
bsort/training/: trainer.py  validator.py
configs/: settings.yaml
data/labels/: train.cache  val.cache
data/labels/train/: raw-250110_dc_s001_b2_3.txt  raw-250110_dc_s001_b3_2.txt  raw-250110_dc_s001_b3_3.txt  raw-250110_dc_s001_b4_1.txt  raw-250110_dc_s001_b5_2.txt
data/labels/val/: raw-250110_dc_s001_b2_15.txt
data/labels_relabeled/: raw-250110_dc_s001_b2_1.txt  raw-250110_dc_s001_b3_4.txt  raw-250110_dc_s001_b4_2.txt  raw-250110_dc_s001_b4_3.txt  raw-250110_dc_s001_b5_3.txt  raw-250110_dc_s001_b5_5.txt
tests/: conftest.py  test_config.py  test_data.py  test_inference.py  test_model.py
